--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,22 +1,20 @@
 <!-- Not registered user navbar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
-        <!-- Icon -->
+      
         <a class="navbar-brand">Cocina Ya</a>
-        <!-- Button for responsive design -->
+      
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <!-- Navbar -->
+        
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
                 <li class="nav-item">
-                    <a class="nav-link">Home</a>
+                    <a class="nav-link" routerLink="home" routerLinkActive="active">Home</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link">Recipes</a>
-                </li>
+                
                 <li class="nav-item">
                     <div class="dropdown">
                         <button class="btn dropdown-toggle nav-link" type="button"
@@ -27,8 +25,9 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">About Us</a>
+                    <a class="nav-link" routerLink="recipes" routerLinkActive="active">About us</a>
                 </li>
+                
             </ul>
 
             <form class="d-lg-flex mx-auto d-none" style="width:40%">
@@ -36,6 +35,7 @@
                 <button class="btn btn-outline-secondary" type="submit">Search</button>
             </form>
 
+        <div *ngIf="!isLogged">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
                     <a class="nav-link">Sign up</a>
@@ -44,11 +44,12 @@
                     <a class="nav-link">Login</a>
                 </li>
             </ul>
-
+        </div>
             <form class="d-lg-none  d-flex">
                 <input class="form-control me-2 " type="search" placeholder="Search">
                 <button class="btn btn-outline-secondary" type="submit">Search</button>
             </form>
         </div>
     </div>
-</nav>
+</nav> 
+<router-outlet></router-outlet>
