--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -20,7 +20,9 @@
                         <button class="btn dropdown-toggle nav-link" type="button"
                             data-bs-toggle="dropdown">Categories</button>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item"></a></li>
+                            <li *ngFor="let category of categories">
+                                <a class="dropdown-item">{{category.strCategory}}</a>
+                            </li>
                         </ul>
                     </div>
                 </li>
