listo las 20 resetas en el compoenente con su tarjeta

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,6 @@
 <div  *ngIf="recipe" class="card " style="width: 18rem;">
     
-       <img *ngIf = "recipe?.strMealThumb" [src]="recipe?.strMealThumb" alt= "{{recipe.strMeal}}">
+       <img *ngIf = "recipe?.strMealThumb" [src]="recipe?.strMealThumb" alt= "{{recipe?.strMeal}}" class="img-fluid">
        <div class="card-body">
             <h5 class="card-title">{{recipe?.strMeal}}</h5>
     
