--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -15,3 +15,9 @@
     justify-content: space-between; /* Distribuye el espacio entre elementos */
     align-items: center; /* Alinea verticalmente los elementos en el centro */
 }
+
+.card {
+  margin: 10px;
+  width: 100%; /* Permite que las tarjetas usen el ancho completo de la columna */
+  /* Ajustes adicionales como bordes, sombras, etc. */
+}   
