--- a/src/app/components/list-recipes/list-recipes.component.html
+++ b/src/app/components/list-recipes/list-recipes.component.html
@@ -1,1 +1,8 @@
 
+<div class="container">
+    <div class="row">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let recipe of recipesList">
+            <app-card [recipe]="recipe"></app-card>
+        </div>
+    </div>
+</div>
