--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,8 +1,8 @@
 <div  *ngIf="recipe" class="card " style="width: 18rem;">
     
-       <img *ngIf = "recipe?.strMealThumb" [src]="recipe?.strMealThumb" alt= "{{recipe?.strMeal}}" class="img-fluid">
+       <img *ngIf = "recipe.strMealThumb" [src]="recipe.strMealThumb" alt= "{{recipe.strMeal}}" class="img-fluid">
        <div class="card-body">
-            <h5 class="card-title">{{recipe?.strMeal}}</h5>
+            <h5 class="card-title">{{recipe.strMeal}}</h5>
     
             <i [class]= "isHeartActive ? 'fas fa-heart heart-icon' : 'far fa-heart heart-icon'"
             (click)="toggleHeart()"
