Implementacion de filtrado por categorias y actualizacion del list-recipes.ts

--- a/src/app/shared/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/components/navigation-bar/navigation-bar.component.html
@@ -22,7 +22,7 @@
                             data-bs-toggle="dropdown">Categories</button>
                         <ul class="dropdown-menu">
                             <li *ngFor="let category of categories">
-                                <a class="dropdown-item nav-link" routerLink="category/:{{category.strCategory}}">{{category.strCategory}}</a>
+                                <a class="dropdown-item nav-link" routerLink="category/{{category.strCategory}}">{{category.strCategory}}</a>
                             </li>
                         </ul>
                     </div>
