cambio de funcionamiento de servicio a componente y hago toda la card clickeable

--- a/src/app/components/card/card.component.css
+++ b/src/app/components/card/card.component.css
@@ -18,6 +18,10 @@
 
 .card {
   margin: 10px;
-  width: 100%; /* Permite que las tarjetas usen el ancho completo de la columna */
-  /* Ajustes adicionales como bordes, sombras, etc. */
+  width: 100%;
+  text-decoration: none; 
+  color: inherit;
 }   
+.card:hover {
+  text-decoration: none;
+}
