Agregado de logica para filtrar por multiples ingredientes. Modificacion para que los ids de las recetas devueltas por el endpoint de filtrado de categorias se conviertan en un array con toda la informacion de cada receta. Creacion de un servicio que contiene la lista de recetas que se filtra y se muestra en el componente de list-recipes.

--- a/src/app/shared/components/ingredient-filtering/ingredient-filtering.component.html
+++ b/src/app/shared/components/ingredient-filtering/ingredient-filtering.component.html
@@ -1,9 +1,9 @@
 <div class="filter-ingredients mt-3">
-  
-    <div>      
-      <div class="ingredient-list">
-        <label *ngFor="let ingredient of ingredientList | slice:0:20" class="mx-2">
-          <input type="checkbox" name="{{ingredient.strIngredient}}Checkbox" [(ngModel)]="ingredient.selected">
-          {{ ingredient.strIngredient }}
-        </label>
+
+  <div>
+    <label *ngFor="let ingredient of ingredientList | slice:0:500" class="mx-2">
+      <input type="checkbox" name="{{ingredient.strIngredient}}Checkbox" [(ngModel)]="ingredient.selected" (change)="onIngredientChange()">
+      {{ ingredient.strIngredient }}
+    </label>
   </div>
+</div>
