--- a/src/app/cocina-ya/components/list-recipes/list-recipes.component.html
+++ b/src/app/cocina-ya/components/list-recipes/list-recipes.component.html
@@ -1,7 +1,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let recipe of recipesList">
+        <div class="col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let recipe of filteredRecipes">
             <app-card [recipe]="recipe"></app-card>
         </div>
     </div>
