se agregaron los link con redes sociales

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -6,7 +6,7 @@
                 <div class=" mt-3">
                     <p class="mb-0">&copy; 2024 CocinaYa</p>
                 </div>
-                <p>Este proyecto ha sido creado con fines académicos de la carrera TUP en la institucion UTN. Todos los derechos reservados </p>
+                <p>Este proyecto ha sido creado con fines académicos de la carrera TUP en la institucion UTN Mar del Plata. Todos los derechos reservados </p>
                
             </div>
 
@@ -16,38 +16,29 @@
                     <li>Borneo Tadeo</li>
                     <li>Loza Jeremias</li>
                     <li>Palavecino Alan</li>
-                    <li>Daniel</li>
+                    <li>Daniel Sciacco</li>
                 </ul>
             </div>
             <div class="col-md-4 mb-3">
                 <h5>Redes Sociales</h5>
                 <div>
-                    <a href="#" class="text-white me-3"><i class="fab fa-google"></i></a>
-                    <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+                    <a href="meilto:tadeoborneo@outlook.com" class="text-white me-3"><i class="fab fa-google"></i>  tadeoborneo&#64;outlook.com</a>
+                    <a href="https://www.instagram.com/tadeo_borneo/" class="text-white"><i class="fab fa-instagram"></i>   tadeo_borneo</a>
                 </div>
                 <div>
-                    <a href="#" class="text-white me-3"><i class="fab fa-google"></i></a>
-                    <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+                    <a href="mailto:jeremiasloza@gmail.com" class="text-white me-3"><i class="fab fa-google"></i> jeremiasloza&#64;gmail.com</a>
+                    <a href="https://www.instagram.com/jereloza/" class="text-white"><i class="fab fa-instagram"></i>   jereloza</a>
                 </div>
                 <div>
-                    <a href="#" class="text-white me-3"><i class="fab fa-google"></i>   palavecinoalan03&#64;gmail.com</a>
-                    <a href="#" class="text-white"><i class="fab fa-instagram"></i>  alanpaalavecino</a>
+                    <a href="mailto:palavecinoalan03@gmail.com" class="text-white me-3"><i class="fab fa-google"></i>   palavecinoalan03&#64;gmail.com</a>
+                    <a href="https://www.instagram.com/alanpaalavecino/" class="text-white"><i class="fab fa-instagram"></i>  alanpaalavecino</a>
                 </div>
                 <div>
-                    <a href="#" class="text-white me-3"><i class="fab fa-google"></i></a>
-                    <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
+                    <a href="mailto:danielsciacco@hotmail.com" class="text-white me-3"><i class="fab fa-google"></i>  danielsciacco&#64;hotmail.com</a>
+            
                 </div>
-                
-
-                
-                
-               
             </div>
-           
-
         </div>
-
-        
     </div>
 </footer>
 
