Agregado de estilo a las etiquetas de ingredientes

--- a/src/app/shared/components/ingredient-filtering/ingredient-filtering.component.html
+++ b/src/app/shared/components/ingredient-filtering/ingredient-filtering.component.html
@@ -1,8 +1,12 @@
 <div class="filter-ingredients mt-3">
-
-  <div>
-    <label *ngFor="let ingredient of ingredientList | slice:0:500" class="mx-2">
-      <input type="checkbox" name="{{ingredient.strIngredient}}Checkbox" [(ngModel)]="ingredient.selected" (change)="onIngredientChange()">
+  <div class="d-flex flex-wrap">
+    <label *ngFor="let ingredient of ingredientList | slice:0:10" 
+           class="btn btn-outline-primary m-2 d-flex align-items-center">
+      <input type="checkbox" 
+             name="{{ingredient.strIngredient}}Checkbox" 
+             [(ngModel)]="ingredient.selected" 
+             (change)="onIngredientChange()" 
+             class="me-2">
       {{ ingredient.strIngredient }}
     </label>
   </div>
