--- a/src/app/shared/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/components/navigation-bar/navigation-bar.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       
-        <a class="navbar-brand">Cocina Ya</a>
+        <a class="navbar-brand" routerLink="home">Cocina Ya</a>
       <!-- Responsive button to hide options -->
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
