--- a/src/app/cocina-ya/components/card/card.component.html
+++ b/src/app/cocina-ya/components/card/card.component.html
@@ -1,14 +1,10 @@
+<a *ngIf="recipe" class="card " style="width: 18rem;">
 
-<a  *ngIf="recipe" class="card " style="width: 18rem;">
-    
-        <img *ngIf = "recipe.strMealThumb" [src]="recipe.strMealThumb" alt= "{{recipe.strMeal}}" class="img-fluid">
+        <img *ngIf="recipe.strMealThumb" [src]="recipe.strMealThumb" alt="{{recipe.strMeal}}" class="img-fluid">
         <div class="card-body">
-             <h5 class="card-title">{{recipe.strMeal}}</h5>
-     
-             <i [class]= "isHeartActive ? 'fas fa-heart heart-icon' : 'far fa-heart heart-icon'"
-             (click)="toggleHeart()"
-             ></i>
-     </div>
-</a>
- 
+                <h5 class="card-title">{{recipe.strMeal}}</h5>
 
+                <i [class]="isHeartActive ? 'fas fa-heart heart-icon' : 'far fa-heart heart-icon'"
+                        (click)="toggleHeart()"></i>
+        </div>
+</a>
