--- a/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
+++ b/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
@@ -3,12 +3,22 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h5 class="modal-title">{{ recipe.strMeal }}</h5>
-                <button type="button" class="close" (click)="closeModal()" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
+                <button type="button" class="close ms-auto" (click)="closeModal()" aria-label="Close">
+                    <span>&times;</span>
                 </button>
             </div>
             <div class="modal-body">
-                <!-- Contenido del modal -->
+                <div class="recipe-img">
+                    <img src="{{recipe.strMealThumb}}" alt="{{recipe.strMeal}}" class="img-fluid">
+                </div>
+                <div class="ingredients" *ngFor="let ingredient of recipeIngredients ; let i = index">
+                    <img src="https://www.themealdb.com/images/ingredients/{{ingredient}}-Small.png" alt="{{ingredient}}">
+                    
+                    <p>{{ingredient}}, {{getMeasure(recipe,i+1)}}</p> 
+                </div>
+                <div class="instructions">
+                    <p>{{recipe.strInstructions}}</p>
+                </div>
             </div>
 
         </div>
