Agregado de ingredient card para mostrar los ingredientes en los detalles de cada receta

--- a/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
+++ b/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
@@ -12,9 +12,7 @@
                     <img src="{{recipe.strMealThumb}}" alt="{{recipe.strMeal}}" class="img-fluid">
                 </div>
                 <div class="ingredients" *ngFor="let ingredient of recipeIngredients ; let i = index">
-                    <img src="https://www.themealdb.com/images/ingredients/{{ingredient}}-Small.png">
-
-                    <p>{{ingredient}}, {{getMeasure(recipe,i+1)}}</p>
+                    <app-ingredient-card [ingredient]="ingredient" [measure]="getMeasure(recipe,i+1)"></app-ingredient-card>
                 </div>
                 <div class="instructions">
                     <p>{{recipe.strInstructions}}</p>
