Agregado de filtrado cuando se clickea un ingrediente

--- a/src/app/cocina-ya/components/ingredient-card/ingredient-card.component.html
+++ b/src/app/cocina-ya/components/ingredient-card/ingredient-card.component.html
@@ -1,5 +1,5 @@
 <div class="card" style="width: 10rem;">
-    <img src="https://www.themealdb.com/images/ingredients/{{ingredient}}-Small.png">
+    <img src="https://www.themealdb.com/images/ingredients/{{ingredient}}-Small.png" alt="{{ingredient}}">
     <div class="card-body">
         <h5>{{measure}} {{ingredient}}</h5>
     </div>
