--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-navigation-bar></app-navigation-bar>
 <app-ingredient-filtering></app-ingredient-filtering>
-<router-outlet ></router-outlet>
-
+<router-outlet></router-outlet>
+<app-footer></app-footer>
