--- a/src/app/shared/components/ingredient-filtering/ingredient-filtering.component.html
+++ b/src/app/shared/components/ingredient-filtering/ingredient-filtering.component.html
@@ -1,7 +1,6 @@
-<div class="filter-ingredients mt-3">
-  <div class="d-flex flex-wrap">
-    <label *ngFor="let ingredient of ingredientList | slice:0:10" 
-           class="btn btn-outline-primary m-2 d-flex align-items-center">
+<div class="row justify-content-center text-center">
+    <label *ngFor="let ingredient of ingredientList | slice:0:20" 
+           class="btn btn-outline-primary m-2 d-flex align-items-center col-lg-1">
       <input type="checkbox" 
              name="{{ingredient.strIngredient}}Checkbox" 
              [(ngModel)]="ingredient.selected" 
@@ -9,5 +8,4 @@
              class="me-2">
       {{ ingredient.strIngredient }}
     </label>
-  </div>
 </div>
