--- a/src/app/cocina-ya/components/ingredient-card/ingredient-card.component.html
+++ b/src/app/cocina-ya/components/ingredient-card/ingredient-card.component.html
@@ -1,6 +1,6 @@
-<div class="ingredient-card">
-    <img src="https://www.themealdb.com/images/ingredients/{{ingredient}}-Small.png" alt="{{ingredient}}" style="text-align: center;">
+<div class="card" style="width: 10rem;">
+    <img src="https://www.themealdb.com/images/ingredients/{{ingredient}}-Small.png" alt="{{ingredient}}">
     <div class="card-body">
-        <h5 class="ingredient-text" >{{measure}} {{ingredient}}</h5>
+        <h5>{{measure}} {{ingredient}}</h5>
     </div>
 </div>
