Ingredient image bug solution

--- a/src/app/cocina-ya/components/ingredient-card/ingredient-card.component.html
+++ b/src/app/cocina-ya/components/ingredient-card/ingredient-card.component.html
@@ -1,5 +1,6 @@
 <div class="ingredient-card">
-    <img src="https://www.themealdb.com/images/ingredients/{{ingredient}}-Small.png" alt="{{ingredient}}" style="text-align: center;">
+    <img *ngIf="ingredient !== 'Candied Peel'" src="https://www.themealdb.com/images/ingredients/{{ingredient}}-Small.png" alt="{{ingredient}}" style="text-align: center;">
+    <img *ngIf="ingredient === 'Candied Peel'" src="https://www.themealdb.com/images/ingredients/{{ingredient}}-Small.png" alt="{{ingredient}}" style="text-align: center; width: 100px;">
     <div class="card-body">
         <h5 class="ingredient-text" >{{measure}} {{ingredient}}</h5>
     </div>
