Implementacion de cerrado de modal con la tecla ESC o clickeando por fuera del mismo

--- a/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
+++ b/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
@@ -1,4 +1,4 @@
-<div class="modal fade show d-block" role="dialog" style="background-color: rgba(0, 0, 0, 0.9);">
+<div class="modal fade show d-block" role="dialog" style="background-color: rgba(0, 0, 0, 0.9);" (click)="onBackdropClick($event)">
     <div class="modal-dialog modal-lg modal-dialog-centered" role="document" style="max-width: 70vw;">
         <div class="modal-content">
             <div class="modal-header">
