Agregado de corazon de favoritos dentro de los detalles de la receta

--- a/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
+++ b/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
@@ -30,6 +30,8 @@
                 </div>
             </div>
             <div class="modal-footer">
+                <i *ngIf="isLogged" [class]="isHeartActive ? 'fas fa-heart heart-icon me-auto' : 'far fa-heart heart-icon me-auto'"
+                        (click)="toggleHeart()"></i>
                 <button class="btn btn-secondary" (click)="previousRecipe()" [disabled]="index === 0">Previous</button>
                 <button class="btn btn-secondary" (click)="nextRecipe()"
                     [disabled]="index === recipes.length - 1">Next</button>
