--- a/src/app/cocina-ya/components/list-recipes/list-recipes.component.html
+++ b/src/app/cocina-ya/components/list-recipes/list-recipes.component.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col-12 col-sm-6 col-md-4 col-lg-3" *ngFor="let recipe of filteredRecipes; let i = index">
-            <app-card [recipe]="recipe" (click)="openRecipeDetail(recipe,i)"></app-card>
+            <app-card [recipe]="recipe" [isHeartActive]="isRecipeFavorite(recipe.idMeal)" (click)="openRecipeDetail(recipe,i)"></app-card>
         </div>
     </div>
 </div>
@@ -12,6 +12,7 @@
     [recipe]="selectedRecipe"
     [index]="selectedIndex"
     [recipes]="filteredRecipes"
+    [isHeartActive]="isRecipeFavorite(selectedRecipe.idMeal)"
     (close)="closeModal()"
     >
 
