Agregado de remover favorito y sincronizacion de corazones con los favoritos del usuario

--- a/src/app/cocina-ya/components/card/card.component.html
+++ b/src/app/cocina-ya/components/card/card.component.html
@@ -5,6 +5,6 @@
                 <h5 class="card-title">{{recipe.strMeal}}</h5>
 
                 <i [class]="isHeartActive ? 'fas fa-heart heart-icon' : 'far fa-heart heart-icon'"
-                        (click)="toggleHeart()"></i>
+                        (click)="onHeartClick('1',recipe.idMeal)"></i>
         </div>
 </a>
