cargo los datos de un usurio ya registrado en el form y modifico datos, por el moemnto hardcodeado

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navigation-bar></app-navigation-bar>
 <app-ingredient-filtering></app-ingredient-filtering>
+<app-edit-user></app-edit-user>
 <router-outlet></router-outlet>
 <app-footer></app-footer>
