se creo pagina para ver datos de usuario y que te redirecciona al componente editar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
 <app-navigation-bar></app-navigation-bar>
-<app-ingredient-filtering></app-ingredient-filtering>
-<app-edit-user></app-edit-user>
+<!-- <app-ingredient-filtering></app-ingredient-filtering> -->
 <router-outlet></router-outlet>
 <app-footer></app-footer>
