--- a/src/app/cocina-ya/components/edit-user/edit-user.component.html
+++ b/src/app/cocina-ya/components/edit-user/edit-user.component.html
@@ -1,4 +1,4 @@
-<h1 class="text-white text-center pt-4">edit</h1>
+<!-- <h1 class="text-white text-center pt-4">edit</h1>
 <form [formGroup]="userForm" class="bg-black text-white align-items-center form custom-center-align text-center mb-4 rounded"
     (ngSubmit)="validateForm()"
 >
@@ -94,3 +94,107 @@
       </button>
 </div>
 </form>
+ -->
+ <div class="container">
+  <h1 class="text-dark text-center pt-4">Edit User</h1>
+  <form 
+    [formGroup]="userForm" 
+    class="p-4 rounded bg-light" 
+    (ngSubmit)="validateForm()"
+  >
+    <div class="row mb-3">
+      <div class="col-lg-6">
+        <label for="name" class="form-label text-dark">Name</label>
+        <input 
+          formControlName="name" 
+          type="text" 
+          class="form-control" 
+          id="name" 
+          aria-describedby="name" 
+        />
+        <div *ngIf="name.invalid && (name.dirty || name.touched)" class="text-danger">
+          <div *ngIf="name.errors?.['required']">Name is required.</div>
+          <div *ngIf="name.errors?.['pattern']">Name must not contain numbers or special characters.</div>
+        </div>
+      </div>
+
+      <div class="col-lg-6">
+        <label for="lastName" class="form-label text-dark">Last Name</label>
+        <input 
+          formControlName="lastName" 
+          type="text" 
+          class="form-control" 
+          id="lastName" 
+          aria-describedby="lastName" 
+        />
+        <div *ngIf="lastName.invalid && (lastName.dirty || lastName.touched)" class="text-danger">
+          <div *ngIf="lastName.errors?.['required']">Last name is required.</div>
+          <div *ngIf="lastName.errors?.['pattern']">Last name must not contain numbers or special characters.</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="mb-3">
+      <label for="email" class="form-label text-dark">Email</label>
+      <input 
+        formControlName="email" 
+        type="email" 
+        class="form-control" 
+        id="email" 
+        aria-describedby="email" 
+      />
+      <div *ngIf="email.invalid && (email.dirty || email.touched)" class="text-danger">
+        <div *ngIf="email.errors?.['required']">Email is required.</div>
+        <div *ngIf="email.errors?.['email']">Invalid email format.</div>
+      </div>
+    </div>
+
+    <div class="row mb-3">
+      <div class="col-lg-6">
+        <label for="password" class="form-label text-dark">Password</label>
+        <input 
+          formControlName="password" 
+          type="password" 
+          class="form-control" 
+          id="password" 
+        />
+        <div *ngIf="password.invalid && (password.dirty || password.touched)" class="text-danger">
+          <div *ngIf="password.errors?.['required']">Password is required.</div>
+          <div *ngIf="password.errors?.['pattern']">
+            Password must have at least:
+            <ul>
+              <li>8 characters</li>
+              <li>1 uppercase letter</li>
+              <li>1 lowercase letter</li>
+              <li>1 number</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-6">
+        <label for="confirmPassword" class="form-label text-dark">Confirm Password</label>
+        <input 
+          type="password" 
+          formControlName="confirmPassword" 
+          class="form-control" 
+          id="confirmPassword" 
+        />
+        <div *ngIf="confirmPassword.invalid && (confirmPassword.dirty || confirmPassword.touched)" class="text-danger">
+          <div *ngIf="confirmPassword.errors?.['required']">Confirm password is required.</div>
+          <div *ngIf="userForm.hasError('passwordMismatch')">Passwords do not match.</div>
+        </div>
+      </div>
+    </div>
+    <hr class="mb-4">
+    <div class="text-center">
+      <button 
+        type="submit" 
+        class="btn btn-primary mt-3" 
+        [disabled]="!userForm.valid"
+      >
+        Update
+      </button>
+    </div>
+  </form>
+</div>
