--- a/src/app/shared/components/navigation-bar/navigation-bar.component.html
+++ b/src/app/shared/components/navigation-bar/navigation-bar.component.html
@@ -42,13 +42,14 @@
         <div *ngIf="!isLogged">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link">Sign up</a>
+                    <a class="nav-link" routerLink="register">Sign up</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link">Login</a>
+                    <a class="nav-link" routerLink="login">Login</a>
                 </li>
             </ul>
         </div>
+
             <form class="d-lg-none  d-flex">
                 <input class="form-control me-2 " type="search" placeholder="Search">
                 <button class="btn btn-outline-secondary" type="submit">Search</button>
