--- a/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
+++ b/src/app/cocina-ya/components/recipe-detail-modal/recipe-detail-modal.component.html
@@ -10,18 +10,25 @@
                 </button>
             </div>
             <div class="modal-body">
-                <div class="recipe-img">
-                    <img src="{{recipe.strMealThumb}}" alt="{{recipe.strMeal}}" class="img-fluid">
+                <div class="recipe-container row">
+                    <!-- Imagen de la receta -->
+                    <div class="recipe-img col">
+                        <img src="{{recipe.strMealThumb}}" alt="{{recipe.strMeal}}" class="img-fluid">
+                    </div>
+                    <!-- Contenedor de ingredientes en grid -->
+                    <div class="ingredients col row">
+                        <div *ngFor="let ingredient of recipeIngredients; let i = index"
+                            class="ingredient-card col-lg-4">
+                            <app-ingredient-card [ingredient]="ingredient" [measure]="getMeasure(recipe,i+1)"
+                                (click)="onIngredientClick(ingredient)" [routerLink]="['/ingredient/'+ingredient]">
+                            </app-ingredient-card>
+                        </div>
+                    </div>
                 </div>
-                <div class="ingredients" *ngFor="let ingredient of recipeIngredients ; let i = index">
-                    <app-ingredient-card 
-                    [ingredient]="ingredient" 
-                    [measure]="getMeasure(recipe,i+1)" 
-                    (click)="onIngredientClick(ingredient)"
-                    [routerLink]="['/ingredient/'+ingredient]"></app-ingredient-card>
-                </div>
-                <div class="instructions">
-                    <p>{{recipe.strInstructions}}</p>
+                <!-- Instrucciones de la receta -->
+                <div class="instructions" >
+                    <h2 style="text-align:center;margin: 10px 0 10px 0;">Instructions</h2>
+                    <p style="text-align: justify;">{{recipe.strInstructions}}</p>
                 </div>
             </div>
             <div class="modal-footer">
@@ -29,7 +36,6 @@
                 <button class="btn btn-secondary" (click)="nextRecipe()"
                     [disabled]="index === recipes.length - 1">Next</button>
             </div>
-
         </div>
     </div>
 </div>
