--- a/src/app/cocina-ya/components/user-page/user-page.component.html
+++ b/src/app/cocina-ya/components/user-page/user-page.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="container ">
+<div class="container " *ngIf="user">
     <h3 class="mb-3 text-center">Detalles del Usuario</h3>
     <div class="p-4 rounded bg-light">
       <div class="row mb-3">
