Integracion de usuarios

--- a/src/app/auth/components/register/register.component.html
+++ b/src/app/auth/components/register/register.component.html
@@ -1,7 +1,6 @@
 <h1 class="text-white text-center pt-4">Register</h1>
 <form
-    [formGroup
-    ]="userForm" class="bg-black text-white align-items-center form custom-center-align text-center mb-4 rounded"
+    [formGroup]="userForm" class="bg-black text-white align-items-center form custom-center-align text-center mb-4 rounded"
 >
 <div>
     <label for="name" class="form-label">Name</label>
